fixed overflow issue

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -29,6 +29,7 @@ nav {
 
 .headingContainer {
   padding: 60px 0 80px 0;
+  overflow: hidden;
 }
 
 //link styled as button
