--- a/styles/styles.css
+++ b/styles/styles.css
@@ -376,6 +376,7 @@ nav ul a:hover, nav ul a:focus {
 
 .headingContainer {
   padding: 60px 0 80px 0;
+  overflow: hidden;
 }
 
 .linkContainer {
